# streawman

./: .cursorignore  .env.example  .gitignore  AGENTS.md  README.md
.cursor/: hooks.json
.cursor/rules/: 00-project.mdc  01-architecture.mdc  02-coding-standards.mdc  03-ai-behavior.mdc  04-dev-workflow.mdc  be-cpp.mdc  fe-nextjs.mdc  infra.mdc  system-design.mdc
apps/streawman-ui/: package-lock.json  package.json
docs/adr/: 001-cpp-framework.md  002-database.md  003-auth-strategy.md  004-transcoding.md  005-load-testing.md  006-streaming-protocol.md  007-reverse-proxy.md  008-async-transcoding.md  009-inter-service-communication.md  010-chunk-storage-naming.md  011-service-architecture.md  012-build-system.md  013-job-queue.md  014-cicd-and-repo-strategy.md  015-cpp-testing.md  016-styling.md  017-database-ownership.md
docs/tasks/: backlog.md  current.md  done.md
infra/compose/: docker-compose.dev.yml
services/core-api/: CMakeLists.txt
services/core-api/db/: migrate.sh
services/core-api/db/migrations/: 001_create_users.sql  002_create_roles.sql  003_create_user_roles.sql  004_create_refresh_tokens.sql  005_create_videos.sql
services/core-api/src/: config.json  main.cpp
services/core-api/src/controllers/health/: HealthCheckController.cpp  HealthCheckController.h
services/core-api/tests/: main.cpp
